--- a/css/Stylec.css
+++ b/css/Stylec.css
@@ -4,3 +4,22 @@ body{
     margin: 0;
     padding: 0;
 }
+
+
+
+
+/* Desarollador uno*/
+.header {
+    height: 100vh;
+    background-color: #333;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+header img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Desarollador dos */
