--- a/css/Stylec.css
+++ b/css/Stylec.css
@@ -23,3 +23,13 @@ header img{
 }
 
 /* Desarollador dos */
+
+
+
+/* Desarollador uno */
+.logo {
+    float: left;
+    font-size: 1.5rem;
+    margin-top: 10px;
+    color: #fff;
+}
