--- a/css/Stylec.css
+++ b/css/Stylec.css
@@ -33,3 +33,29 @@ header img{
     margin-top: 10px;
     color: #fff;
 }
+/* Desarollador dos */
+
+
+
+
+
+
+
+
+/* Desarollador uno */
+.gallery {
+    margin-top: 20px;
+    flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+.gallery img {
+    width: 100%;
+    margin: 10px;
+    box-sizing: border-box;
+    border:  2px solid #ddd;
+    border-radius: 8px;
+    transition: transform 0.3s ease-in-out;
+}
+.gallery img:hover {
+    transform: scale(1.1);
+}
